# barnes-hut-cpp

./: .gitignore  CMakeLists.txt  README.md  viz.py  viz_omp.py  viz_thread.py
data/: measurements.csv  measurements_cuda.csv  measurements_omp.csv  measurements_parallel.csv
src/: main.cpp
